--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <header class="hero">
         <img src="Kuvat/palkinto.png" alt="logo" class="heropic">
-        <h1>Dokathlon 2024</h1>
+        <h1>Dokathlon 2025</h1>
     </header>
     <nav>
         <a href="index.html">Kotisivu</a>
@@ -22,31 +22,33 @@
     <div class="container">
         <div class="content">
             <h2>Informaatiota kisasta</h2>
-            <p>Vuoden 2024 Dokathlon järjestetään historiallisen Casa Winterroadin tiluksilla, jossa myös Dokahtlonin aloituspöytäkirjat allekirjoitettiin. Dokahtlon järjestetään 9-11.8 viikonloppuna. Alla näette Dokahtlonin alustavan ohjelman. IDSP pidättää oikeuden aikataulun muutoksiin.</p>
+            <p>Vuoden 2025 Dokathlon järjestetään historiallisen Casa Winterroadin tiluksilla, jossa myös Dokahtlonin aloituspöytäkirjat allekirjoitettiin. Dokahtlon järjestetään 1.-3.8 viikonloppuna. Alla näette Dokahtlonin alustavan ohjelman. IDSP pidättää oikeuden aikataulun muutoksiin.</p>
         </div>
         <div class="content">
             <h2>Kilpailuviikonlopun aikataulu</h2>
-            <h3>Pe 9.8</h3>
+            <h3>Pe 1.8</h3>
             <p><strong>Klo 16-</strong></p>
             <p>Saapuminen Vääksyyn, Omatoiminen asettautiminen, saunominen, ruokailu ja juhliminen</p>
-            <h3>La 10.8</h3>
-            <p><strong>Klo 9-12</strong></p>
-            <p>Dokahtlonin juhlallinen aloitus, Ensimmäiset 5 lajia aamupäivällä, jonka jälkeen Joni Pihlmanin loihtima pastatarjoilu.</p>
-            <p><strong>Klo 13-17</strong></p>
-            <p>Lajien 6-10 suoritus</p>
-            <p><strong>Klo 17-19</strong></p>
+            <h3>La 2.8</h3>
+            <p><strong>Klo 10-13</strong></p>
+            <p>Dokahtlonin juhlallinen aloitus, Ensimmäiset 5 lajia aamupäivällä, jonka jälkeen pizzatarjoilu juhlaväen toiveiden mukaan.</p>
+            <p><strong>Klo 14-18</strong></p>
+            <p>Lajien 6-9 suoritus, jonka jälkeen mökille siirtyminen</p>
+            <p><strong>Klo 19-</strong></p>
             <p>Valmistautuminen illan palkintojen jakoon ja seremonialliseen rapujuhlaan</p>
-            <p><strong>Klo 19-23</strong></p>
-            <p>Legendaariset rapujuhlat</p>
-            <p><strong>Klo 23-</strong></p>
+            <p><strong>Klo 20-24</strong></p>
+            <p>Legendaariset rapujuhlat ja palkintojen jako</p>
+            <p><strong>Klo 24-</strong></p>
             <p>?</p>
-            <h3>Su 11.8</h3>
+            <p><strong>Klo 07-</strong></p>
+            <p>Sauna</p>
+            <h3>Su 3.8</h3>
             <p><strong>Klo 9-21</strong></p>
             <p>Herääminen</p>
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Dokathlon. Kaikki (oikeudet) pidätetään.</p>
+        <p>&copy; 2025 Dokathlon. Kaikki (oikeudet) pidätetään.</p>
     </footer>
 </body>
 </html>
