--- a/P4Ppages/P4P17.html
+++ b/P4Ppages/P4P17.html
@@ -24,11 +24,11 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Otto.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Jiri.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Otto Hannula</h2>
-                <h2>Featherweight Division</h2>
-                <p>25-1-0 (W-L-D)</p>
+                <h2>Jenni Hurskainen</h2>
+                <h2>Lande Division</h2>
+                <p>0-0-0 (W-L-D)</p>
                 <div class="record">
                     <div>
                         <h3>0</h3>
@@ -39,7 +39,7 @@
                         <p>Hopea</p>
                     </div>
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Pronssi</p>
                     </div>
                 </div>
@@ -52,39 +52,37 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Nikotiini statsit</h3>
+                <h3>Vahvuudet</h3>
+                <p>Excel-taidot</p>
+                <p>Aallon Academic Weapon</p>
+                <p>Lempäälän keulakuva</p>
+            </div>
+            <div class="stat">
+                <h3>Heikkoudet</h3>
+                <p>Saattaa saada kutsun takaisin dansken toimistolle kesken kilpailun vaikkei ole enää töissä siellä</p>
+                <p>Rehellinen bulkkiolut</p>
+            </div>
+            <div class="stat">
+                <h3>Kesän tilastot</h3>
+                <p>Lempäälän kunnan arvoa nostettu 100%</p>
+                <p>1 lenkki suoritettu</p>
                 <p></p>
-                <p>Ostaa miedompia ja pummii vahvempia nikotiinipusseja</p>
-                <p>Lopettanut lopullisesti jo 4 kertaa!</p>
-            </div>
-            <div class="stat">
-                <h3>Ruokastatsit</h3>
-                <p>5 päivää viikossa nistipataa</p>
-                <p>Vastuussa puolista suomessa tuotetun karjan ja siipikarjan kuolemista</p>
-                <p>450€ käytetty mökkiviikonlopun "yösafkoihin"</p>
-            </div>
-            <div class="stat">
-                <h3>Jypikylä statsit</h3>
-                <p>12 junamatkaa viikossa</p>
-                <p>Dietointi mennyt reisille joka kerta ennen sen alkamista</p>
-                <p>78% omistus Suomen jauhelihoista</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>Ei dokathlon puolustettavaa</p>
-                <p>7% puolustustehokkuus Tehtaankadun sohvalla nukkumisesta</p>
-                <p>100% puolustustehokkuus baarissa vittuilulta pelkällä elopainolla</p>
+                <p>Keväällä puolustus korkealla, kesällä olematon</p>
+                <p>50% puolustustehokkuus Torstai Kallesta</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>Pelasti Neste Oy:n varmalta konkurssilta ostamalla raakaöljyä Venäjältä ja jalostamalla sen kiinalaisten lasten avulla</p>
-                <p>Nauttii Täffän lounaan klo 11-16, ei siis siinä välissä vaan koko ajan</p>
+                <p>12,5h keskiverto työpäivä keväällä</p>
+                <p>0h keskiarvo työpäivä kesällä</p>
+                <p>Ultimaattinen shareholder valuen kasvattaja</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>100% lajeista raa'alla voimalla</p>
-                <p>Pystyy olemuksellaan saavuttamaan luovutusvoiton muilta osallistujilta</p>
-                <p>Hienomotoriikka yhtä sivelevä kuin juuresharja</p>
+                <p>Ei aiempaa kokemusta lajeista</p>
+                <p>IDSC tulee suorittamaan dopingtestin ennen kilpailuja kyseiselle kilpailijalle</p>
             </div>
         </div>
     </section>
