--- a/P4Ppages/P4P17.html
+++ b/P4Ppages/P4P17.html
@@ -24,7 +24,7 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Jiri.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/henny.jpg" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
                 <h2>Jenni Hurskainen</h2>
                 <h2>Lande Division</h2>
@@ -53,36 +53,36 @@
         <div class="stats-grid">
             <div class="stat">
                 <h3>Vahvuudet</h3>
-                <p>Excel-taidot</p>
-                <p>Aallon Academic Weapon</p>
-                <p>Lempäälän keulakuva</p>
+                <p>Kahvin läikyttäminen ja esineiden pudottaminen</p>
+                <p>Sängyssä enemmän koristetyynyjä ku saunan käyttökertoja kahden buoden aikana</p>
+                <p>Lempäälän keulakuva</p>   
             </div>
             <div class="stat">
                 <h3>Heikkoudet</h3>
-                <p>Saattaa saada kutsun takaisin dansken toimistolle kesken kilpailun vaikkei ole enää töissä siellä</p>
-                <p>Rehellinen bulkkiolut</p>
+                <p>Ässämix mehujää</p>
+                <p>Lipsauttaa silloin tällöin Pohjois-Karjalan murretta (kotoisin siis Espoosta) ja ärsyyntyy kun siitä huomauttaa</p>
             </div>
             <div class="stat">
                 <h3>Kesän tilastot</h3>
-                <p>Lempäälän kunnan arvoa nostettu 100%</p>
-                <p>1 lenkki suoritettu</p>
-                <p></p>
+                <p>Kämpän lämpötila saavuttaa hopean sulamispistettä</p>
+                <p>40 uutta ihmistä tavattu ja 14 kokonaista lausetta puhuttu</p>
+                <p>Herätys klo 04:30 tai 13:30 ei koskaan siitä välistä</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>Keväällä puolustus korkealla, kesällä olematon</p>
-                <p>50% puolustustehokkuus Torstai Kallesta</p>
+                <p>Heikin kutsumana 0%, muuten 100%</p>
+                <p>Jos tutustuu henkilökohtaisesti saattaa käyttää lievää väkivaltaa</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>12,5h keskiverto työpäivä keväällä</p>
-                <p>0h keskiarvo työpäivä kesällä</p>
-                <p>Ultimaattinen shareholder valuen kasvattaja</p>
+                <p>4500 työhakemusta jätetty</p>
+                <p>Yhdistystoimintaan käytetty enemmän aikaa kuin töihin</p>
+                <p>Varmaan kohtuu helposti saa tavaroita varastettua jos Jenni kassalla samaan aikaan</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
                 <p>Ei aiempaa kokemusta lajeista</p>
-                <p>IDSC tulee suorittamaan dopingtestin ennen kilpailuja kyseiselle kilpailijalle</p>
+                <p>IDSC scoutannut osallistujan kyseenalaisista piireistä, niin sanottu "hail mary"</p>
             </div>
         </div>
     </section>
