--- a/ranking.html
+++ b/ranking.html
@@ -29,7 +29,7 @@
         </div>
         <div class="content">
             <p>Dokatholin historiaan mahtuu suuria legendoja. Kysymys kuitenkin kuuluu: Kuka vie halutun Dokathlon-maljan tänä vuonna? </p>
-            <p>Tälle sivulle on kerätty Dokathlon 2024 Kilpailijoiden Power Ranking entisten kilpailujen ja perättömän spekulaation perusteella. Henkilön nimeä klikkaamalla voit tukia vastustajien tilastoja, heikkouksia ja vahvuuksia valmistautuessasi raastavaan kilpailuun.</p>
+            <p>Tälle sivulle on kerätty Dokathlon 2025 Kilpailijoiden Power Ranking entisten kilpailujen ja perättömän spekulaation perusteella. Henkilön nimeä klikkaamalla voit tukia vastustajien tilastoja, heikkouksia ja vahvuuksia valmistautuessasi raastavaan kilpailuun.</p>
         </div>
         <a href="P4Ppages/P4P1.html">
             <div class="P4Pcontent">
@@ -41,37 +41,37 @@
                 2. Veikko Talvitie
             </div>
         </a>
+        <a href="P4Ppages/P4P9.html">
+            <div class="P4Pcontent">
+                3. Elias Leikkonen
+            </div>
+        </a>
         <a href="P4Ppages/P4P4.html">
             <div class="P4Pcontent">
-                3. Juho Säde
+                4. Juho Säde
             </div>
         </a>
         <a href="P4Ppages/P4P5.html">
             <div class="P4Pcontent">
-                4. Otto Hannula
+                5. Otto Hannula
             </div>
         </a>
         <a href="P4Ppages/P4P7.html">
             <div class="P4Pcontent">
-                5. Risto Hartikainen
+                6. Risto Hartikainen
             </div>
         </a>
         <a href="P4Ppages/P4P6.html">
             <div class="P4Pcontent">
-                6. Alvar Huotari
+                7. Alvar Huotari
             </div>
         </a>
         <a href="P4Ppages/P4P10.html">
             <div class="P4Pcontent">
-                7. Marikki Viljasaari
+                8. Marikki Viljasaari
             </div>
         </a>
 
-        <a href="P4Ppages/P4P9.html">
-            <div class="P4Pcontent">
-                8. Elias Leikkonen
-            </div>
-        </a>
         <a href="P4Ppages/P4P3.html">
             <div class="P4Pcontent">
                 9. Max Kuula
@@ -112,7 +112,11 @@
                 16. Jiri Aro
             </div>
         </a>
-
+        <a href="P4Ppages/P4P16.html">
+            <div class="P4Pcontent">
+                17. Jenni Hurskainen
+            </div>
+        </a>
     </div>
     <footer>
         <p>&copy; 2025 Dokathlon. Kaikki (oikeudet) pidätetään.</p>
