--- a/P4Ppages/P4P17.html
+++ b/P4Ppages/P4P17.html
@@ -54,8 +54,7 @@
             <div class="stat">
                 <h3>Vahvuudet</h3>
                 <p>Kahvin läikyttäminen ja esineiden pudottaminen</p>
-                <p>Sängyssä enemmän koristetyynyjä ku saunan käyttökertoja kahden buoden aikana</p>
-                <p>Lempäälän keulakuva</p>   
+                <p>Sängyssä enemmän koristetyynyjä ku saunan käyttökertoja kahden vuoden aikana</p>
             </div>
             <div class="stat">
                 <h3>Heikkoudet</h3>
