--- a/ranking.html
+++ b/ranking.html
@@ -29,7 +29,7 @@
         </div>
         <div class="content">
             <p>Dokatholin historiaan mahtuu suuria legendoja. Kysymys kuitenkin kuuluu: Kuka vie halutun Dokathlon-maljan tänä vuonna? </p>
-            <p>Tälle sivulle on kerätty Dokathlon 2025 Kilpailijoiden Power Ranking entisten kilpailujen ja perättömän spekulaation perusteella. Henkilön nimeä klikkaamalla voit tukia vastustajien tilastoja, heikkouksia ja vahvuuksia valmistautuessasi raastavaan kilpailuun.</p>
+            <p>Tälle sivulle on kerätty Dokathlon 2025 Kilpailijoiden Power Ranking entisten kilpailujen ja perättömän spekulaation perusteella. Henkilön nimeä klikkaamalla voit tutkia vastustajien tilastoja, heikkouksia ja vahvuuksia valmistautuessasi raastavaan kilpailuun.</p>
         </div>
         <a href="P4Ppages/P4P1.html">
             <div class="P4Pcontent">
