--- a/history.html
+++ b/history.html
@@ -55,7 +55,17 @@
                 <p>Sanotaan, että hyvä viini paranee ajan kanssa ja tämä sääntö näyttää pätevän myös urheilujuhliin. Dokathlon palasi alkusijoilleen kolmantena vuotenaan ja kilpailun taso oli historian korkein. Vuolenkosken sheriffin äkillisen katoamisen takia, paikallisen poliisin kanssa yhteisymmärryksessä tapahtuman kokoa supistettiin turvallisuussyistä. Kilpailun pienempi koko ei kuitenkaan tarkoittanut, että kilpailun taso putoaisi. </p>
             </p>Vuoden 2023 dokathlon olikin historian tasaisin. Voittaja selvisikin vasta viimeisessä lajissa. Koko kilpailun altavastaajan asemassa ollut Veikko Talvitie kipusi viimeisten lajien aikana muutaman pisteen päähän Juho Säteestä, joka oli pitänyt kärkipaikaa suuren osan kilpalusta. Viimeisessä lajissa Talvitie jätti kaiken pelikentälle ja voitti Säteen. Tilanne oli kuitenkin niin tasainen, että viimeisen lajin jälkeen voittaja ei vielä ollut selvillä ja IDSC joutui suorittamaan pisteiden uudelleenlaskun. Uudelleenlasku varmisti Talviten uskomattoman nousun Dokathlonin uudeksi mestariksi.</p>
             </div>
+        <div class="content">
+            <div class="headerhis">
+                <img src="Kuvat/history3.jpg" alt="historiakuva 3" class="history1">
+                <h2>2024 Syöttimies säväyttää</h2>
+                </div>
+                <p>Viimeisin Dokathlon ei kyllä jättänyt faneja kylmäksi! Tapahtuma sai ensimmäistä kertaa live-juontajan, jotta miljoonat katsojat kotona pysyivät vauhdikkaassa kilpailussa mukana. Elias ”Bateman” Leikkonen oli pitänyt ennen kisaa salaisen high-altitude treenileirin Kallen yläkerrassa ja treenin tulos näkyi ja Bateman kurvasi kokonaisvoittoon ongelmitta.</p>
+
+                <p>Gaalaillalisella kohdattiin urheilupiireissä tunnettu ”New Yorkin moka”, jossa tarjoilu aloitetaan New Yorkin kellonajan mukaan. Onneksi kaikki osallistujat olivat vielä virkeinä päivän koitoksista ja marssivat iloisina pöytään. Juhlat lopetettiin palkinnonjaolla, jossa ensimmäistä kertaa palkittiin Dokathlon Spirit palkinnolla Juontaja Säde.</p>
+            </div>
     </div>
+
     <footer>
         <p>&copy; 2025 Dokathlon. Kaikki (oikeudet) pidätetään.</p>
     </footer>
