--- a/history.html
+++ b/history.html
@@ -57,7 +57,7 @@
             </div>
         <div class="content">
             <div class="headerhis">
-                <img src="Kuvat/history3.jpg" alt="historiakuva 3" class="history1">
+                <img src="Kuvat/519f5679-03b0-4ca0-9448-ed579f20f3fd.jpg" alt="historiakuva 3" class="history1">
                 <h2>2024 Syöttimies säväyttää</h2>
                 </div>
                 <p>Viimeisin Dokathlon ei kyllä jättänyt faneja kylmäksi! Tapahtuma sai ensimmäistä kertaa live-juontajan, jotta miljoonat katsojat kotona pysyivät vauhdikkaassa kilpailussa mukana. Elias ”Bateman” Leikkonen oli pitänyt ennen kisaa salaisen high-altitude treenileirin Kallen yläkerrassa ja treenin tulos näkyi ja Bateman kurvasi kokonaisvoittoon ongelmitta.</p>
