--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <p><strong>Klo 10-13</strong></p>
             <p>Dokahtlonin juhlallinen aloitus, Ensimmäiset 5 lajia aamupäivällä, jonka jälkeen pizzatarjoilu juhlaväen toiveiden mukaan.</p>
             <p><strong>Klo 14-18</strong></p>
-            <p>Lajien 6-9 suoritus, jonka jälkeen mökille siirtyminen</p>
+            <p>Lajien 6-9 suoritus, jonka jälkeen mökille siirtyminen, jossa erittäin salainen viimeinen laji</p>
             <p><strong>Klo 19-</strong></p>
             <p>Valmistautuminen illan palkintojen jakoon ja seremonialliseen rapujuhlaan</p>
             <p><strong>Klo 20-24</strong></p>
