--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             <p><strong>Klo 24-</strong></p>
             <p>?</p>
             <p><strong>Klo 07-</strong></p>
-            <p>Sauna</p>
+            <p>Sauna Frank Pihlmanin johdattelemana</p>
             <h3>Su 3.8</h3>
             <p><strong>Klo 9-21</strong></p>
             <p>Herääminen</p>
