--- a/P4Ppages/P4P17.html
+++ b/P4Ppages/P4P17.html
@@ -26,7 +26,7 @@
         <div class="fighter-header">
             <img src="../Kuvat/henny.jpg" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Jenni Hurskainen</h2>
+                <h2>Jenni "Henny" Hurskainen</h2>
                 <h2>Lande Division</h2>
                 <p>0-0-0 (W-L-D)</p>
                 <div class="record">
@@ -76,7 +76,7 @@
                 <h3>Työtilastot</h3>
                 <p>4500 työhakemusta jätetty</p>
                 <p>Yhdistystoimintaan käytetty enemmän aikaa kuin töihin</p>
-                <p>Varmaan kohtuu helposti saa tavaroita varastettua jos Jenni kassalla samaan aikaan</p>
+                <p>K-citymarket näpistykset +76% Jennin ollessa kassalla</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
