--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="content">
             <h2>Informaatiota kisasta</h2>
-            <p>Vuoden 2025 Dokathlon järjestetään historiallisen Casa Winterroadin tiluksilla, jossa myös Dokahtlonin aloituspöytäkirjat allekirjoitettiin. Dokahtlon järjestetään 1.-3.8 viikonloppuna. Alla näette Dokahtlonin alustavan ohjelman. IDSP pidättää oikeuden aikataulun muutoksiin.</p>
+            <p>Vuoden 2025 Dokathlon järjestetään historiallisen Casa Winterroadin tiluksilla, jossa myös Dokahtlonin aloituspöytäkirjat allekirjoitettiin. Dokahtlon järjestetään 1.-3.8 viikonloppuna. Alla näette Dokahtlonin alustavan ohjelman. IDSC pidättää oikeuden aikataulun muutoksiin.</p>
         </div>
         <div class="content">
             <h2>Kilpailuviikonlopun aikataulu</h2>
