--- a/P4Ppages/P4P5.html
+++ b/P4Ppages/P4P5.html
@@ -77,7 +77,7 @@
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>Pelasti Neste Oy:n varmalta konkurssilta ostamalla raakaöljyä Venäjältä ja jalostamalla sen kiinalaisten lasten avulla</p>
+                <p>Pelasti Neste Oy:n varmalta konkurssilta puristamalla raakaöljyä paljain käsin Itämeren pohjasedimentistä</p>
                 <p>Nauttii Täffän lounaan klo 11-16, ei siis siinä välissä vaan koko ajan</p>
             </div>
             <div class="stat">
