--- a/P4Ppages/P4P2.html
+++ b/P4Ppages/P4P2.html
@@ -53,8 +53,8 @@
         <div class="stats-grid">
             <div class="stat">
                 <h3>Kesän tilastot</h3>
-                <p>3 Päivää vietetty kotona</p>
-                <p>30pv merellä</p>
+                <p>3 Päivää vietetty 2 kodissa</p>
+                <p>1 kpl atlantin ylitys</p>
                 <p>13 jallua tuhottu</p>
             </div>
             <div class="stat">
@@ -65,23 +65,22 @@
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
-                <p>0 vessapaperirullaa ostettu 12.10.2023 jälkeen</p>
-                <p>100% huoneensiivous tehokkuus (Tilastohistorian paras)</p>
-                <p>Selvä 1.sija sakkokassassa</p>
+                <p>Kahvinkeitintä käytetty 2 kertaa (Heikki ja Joni)</p>
+                <p>Mealpreppaa ostamalla valmiaterioita viikoksi kerrallaan</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus vuoden 2024 dokathloniin</p>
+                <p>Hävitty puolustus syöttimiestä vastaan</p>
                 <p>5% puolustustehokkuus Torstai Kallesta</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
                 <p>4 veneenpohjaa hiottu</p>
-                <p>-</p>
+                <p>3 kg firman popcorneja syöty</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p></p>
+                <p>Loppukisan musta hevonen</p>
                 <p>100% lajeista humalassa</p>
             </div>
         </div>
