--- a/P4Ppages/P4P4.html
+++ b/P4Ppages/P4P4.html
@@ -52,7 +52,7 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Urheilustatsit</h3>
+                <h3>Vaihtostatsit</h3>
                 <p>800 km pyöräilty viikonlopun aikana</p>
                 <p>25 padelmatsia krapulassa</p>
             </div>
@@ -60,7 +60,7 @@
                 <h3>Netflix statsit</h3>
                 <p>pyörii taustalla kokatessa, töitä tehdessä ja reelejä selatessa</p>
                 <p>Modern family 8 kertaa läpi</p>
-                <p>Providaa kaikki tunnukset kämppiksille <3 </p>
+                <p>Providaa  </p>
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
