--- a/P4Ppages/P4P12.html
+++ b/P4Ppages/P4P12.html
@@ -55,7 +55,7 @@
                 <h3>Vahvuudet</h3>
                 <p>Kilpikonnapuolustus</p>
                 <p>Golf swingin kauneus</p>
-                <p></p>
+                <p>Kilpailijoiden ruokailutottumukset opittu Woltin salaisista kansioista</p>
             </div>
             <div class="stat">
                 <h3>Heikkoudet</h3>
