--- a/P4Ppages/P4P4.html
+++ b/P4Ppages/P4P4.html
@@ -53,19 +53,19 @@
         <div class="stats-grid">
             <div class="stat">
                 <h3>Vaihtostatsit</h3>
-                <p>800 km pyöräilty viikonlopun aikana</p>
-                <p>25 padelmatsia krapulassa</p>
+                <p>2 viikkoa viidakossa</p>
+                <p>2 viikkoa koulussa</p>
             </div>
             <div class="stat">
-                <h3>Netflix statsit</h3>
-                <p>pyörii taustalla kokatessa, töitä tehdessä ja reelejä selatessa</p>
-                <p>Modern family 8 kertaa läpi</p>
-                <p>Providaa  </p>
+                <h3>Kesän tilastot</h3>
+                <p>Todennäköisyys olla ulkona sunnareilla tai arkipäivänä suurempi ku viikonloppuna</p>
+                <p></p>
+                <p></p>
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
                 <p>2 viikon elinajanodote yrteillä</p>
-                <p></p>
+                <p>Pelkästään tyttöystävän nimi ovessa</p>
                 <p>85% omistus asunnon sipuleista</p>
             </div>
             <div class="stat">
@@ -77,7 +77,7 @@
             <div class="stat">
                 <h3>Työtilastot</h3>
                 <p>2 viikkoa etätöissä, 2 viikkoa lomalla</p>
-                <p>10km lenkki lounastauon yhteydessä</p>
+                <p>Uus työpaikka securattu ja tietokanta poistuu ekan työpäivän aikana</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
