--- a/P4Ppages/P4P7.html
+++ b/P4Ppages/P4P7.html
@@ -31,7 +31,7 @@
                 <p>25-1-0 (W-L-D)</p>
                 <div class="record">
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Kulta</p>
                     </div>
                     <div>
@@ -65,9 +65,9 @@
             </div>
             <div class="stat">
                 <h3>Voimistelu statsit</h3>
-                <p>+10kg elopainoa 2 kuukaudessa</p>
-                <p>loukkaantumisen todennäköisyys >50% joka treenissä</p>
-                <p>eniten dibsejä suomalaisista voimistelijoista</p>
+                <p>-10kg elopainoa 2 kuukaudessa lopettamisen jälkeen</p>
+                <p>1 kpl SM kulta</p>
+                <p></p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
