--- a/P4Ppages/P4P1.html
+++ b/P4Ppages/P4P1.html
@@ -65,9 +65,9 @@
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
-                <p>12% lakanioden vaihto tehokkuus</p>
-                <p>1,2 miljoona hiekanjyvää huoneen lattialla</p>
-                <p>78% omistus asunnon jauhelihoista</p>
+                <p>Uusi asunto Niittykummun kylässä</p>
+                <p>0 herätystä jatkojen takia muuton jälkeen</p>
+                <p></p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
