--- a/P4Ppages/P4P10.html
+++ b/P4Ppages/P4P10.html
@@ -70,7 +70,7 @@
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>Liigan johtavia puolustustehokkuus Torstai Kallesta</p>
+                <p>Liigan johtavia puolustustehokkuuksia Torstai Kallesta</p>
                 <p>Liigan huonoin puolustustehokkuus Hyvinkään Rillosta</p>
             </div>
             <div class="stat">
@@ -81,7 +81,7 @@
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>Ei aiempaa näyttöä</p>
+                <p>Lupaava ensimmäinen kisa takana</p>
                 <p>IDSC odotukset korkealla</p>
             </div>
         </div>
