--- a/P4Ppages/P4P11.html
+++ b/P4Ppages/P4P11.html
@@ -65,22 +65,22 @@
             <div class="stat">
                 <h3>Kämppä statsit</h3>
                 <p>20h viikossa beer pong pöytä pystyssä larun kämpässä</p>
-                <p>odotusarvo 0 taloyhtiön saunavuoroa seuraavan vuoden aikana</p>   
+                <p>odotusarvo 13h jacuzzissa per viikko</p>   
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>Puolustus mökillä nukkuessa heikko heikkoa</p>
+                <p>Puolustus mökillä nukkuessa heikkoa</p>
                 <p>Puolustut jalakpallokentällä huomattavasti parempitasoista</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>Nordean arvoa nostettu 2%</p>
-                <p>0 etätyöpäivää</p>
+                <p>Orionin toimitaa tehostettu 10% (Yt-neuvotteluilla)</p>
+                <p>50% etätyöpäiviä</p>
                 <p></p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>Ei aiempaan näyttöä</p>
+                <p>Uskomaton ensimmäinen näyttö</p>
                 <p>Dokathlonin "Underdog"</p>
             </div>
         </div>
