--- a/P4Ppages/P4P12.html
+++ b/P4Ppages/P4P12.html
@@ -65,7 +65,7 @@
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
-                <p>Lauttasaaren asunnon pinta-alasta 40% saunaa</p>
+                <p>Riisinkeitintä ei vieläkään saatu tasolle näytille</p>
                 <p>3kg riisiä keitetty viikon aikana</p>
                 <p>50% asunnon sähkölaskusta mennyt RuneScapen pelaamiseen</p>
             </div>
