--- a/P4Ppages/P4P13.html
+++ b/P4Ppages/P4P13.html
@@ -65,7 +65,7 @@
             </div>
             <div class="stat">
                 <h3>Juomatilastot</h3>
-                <p>3.57 energiajuomaa per pivä</p>
+                <p>3.57 energiajuomaa per päivä</p>
                 <p>Selkäranka katkeaa, kun edes mainitaan Aperol spritz</p>
             </div>
             <div class="stat">
@@ -80,7 +80,7 @@
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>Ei aikaisempaa osallistumista</p>
+                <p>Ailahteleva</p>
                 <p></p>
             </div>
         </div>
