--- a/P4Ppages/P4P6.html
+++ b/P4Ppages/P4P6.html
@@ -72,12 +72,12 @@
             <div class="stat">
                 <h3>Puolustus</h3>
                 <p>Puolustus Ilarin servauksilta maailmanluokkaa</p>
-                <p>Puolustustehokkuus Torstai Kallesta noussut vaihdon jälkeen 30%</p>
+                <p>Puolustustehokkuus Torstai Kallesta laskenut kevään aikana</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>2 viikkoa asfalttitöitä</p>
-                <p>Kesäloman suurin nautiskelija</p>
+                <p>Toimitotyön ansiosta sisäsiisti rahishärkä</p>
+                <p>Uusi työ ei vaikuta yöelämästä nautiskeluun</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
