--- a/P4Ppages/P4P8.html
+++ b/P4Ppages/P4P8.html
@@ -59,15 +59,15 @@
             </div>
             <div class="stat">
                 <h3>Rapujuhla statsit</h3>
-                <p>3 vuoden aikana 8 rapua syöty</p>
+                <p>4 vuoden aikana 8 rapua syöty</p>
                 <p>6 kertainen suomen mestari</p>
                 <p>200€ euroa käytetty uusiin Honoreihin (8kpl)</p>
             </div>
             <div class="stat">
-                <h3>Pitsku statsit </h3>
-                <p>12 Puukotusta viikottain</p>
-                <p>4 kertaa bensat viety autosta</p>
-                <p>8 ruokamyrkytystä epäilyttävän halvasta lähipizzerisasta</p>
+                <h3>Kamppi statsit </h3>
+                <p>2 pattinen hella</p>
+                <p>Uuni poistettu ulosotossa</p>
+                <p>Asunto vaarallisen lähellä yöelämää</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
@@ -76,8 +76,8 @@
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>Kaikki mahdolliset rekkakortit</p>
-                <p>200 000 km ajettu yhtä soittoa</p>
+                <p>Newsec vuoden tulokas</p>
+                <p>25 kiinteistöä kuvattu seltzerin voimalla</p>
                 <p>400 uutta kiinteistöä omissa nimissä</p>
             </div>
             <div class="stat">
