--- a/ranking.html
+++ b/ranking.html
@@ -117,6 +117,11 @@
                 17. Jenni Hurskainen
             </div>
         </a>
+        <a href="P4Ppages/P4P17.html">
+            <div class="P4Pcontent">
+                18. Matja Lasarenko
+            </div>
+        </a>
     </div>
     <footer>
         <p>&copy; 2025 Dokathlon. Kaikki (oikeudet) pidätetään.</p>
